--- a/visa-remote-desktop/pom.xml
+++ b/visa-remote-desktop/pom.xml
@@ -11,12 +11,14 @@
 
     <artifactId>visa-remote-desktop</artifactId>
     <properties>
-        <guacamole.version>1.3.0</guacamole.version>
+        <guacamole.version>1.5.4</guacamole.version>
         <guice.version>4.1.0</guice.version>
         <slf4j.version>1.6.1</slf4j.version>
         <netty.socketio.version>1.7.18</netty.socketio.version>
         <redisson.version>3.10.7</redisson.version>
         <jeromq.version>0.5.2</jeromq.version>
+        <jetty.version>9.4.44.v20210927</jetty.version>
+        <javax.websocket.api.version>1.0</javax.websocket.api.version>
     </properties>
     <dependencies>
         <dependency>
@@ -43,11 +45,27 @@
             <groupId>eu.ill</groupId>
             <artifactId>webx-relay</artifactId>
             <version>0.1.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-reload4j</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.zeromq</groupId>
             <artifactId>jeromq</artifactId>
             <version>${jeromq.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.websocket</groupId>
+            <artifactId>javax.websocket-api</artifactId>
+            <version>${javax.websocket.api.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.jetty.websocket</groupId>
+            <artifactId>javax-websocket-server-impl</artifactId>
+            <version>${jetty.version}</version>
         </dependency>
     </dependencies>
 </project>
