--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,6 +6,7 @@ on:
     tags: [ "*.*.*" ]
   pull_request:
     branches: [ "dev" ]
+  workflow_dispatch: # enable manual triggering
 
 jobs:
   docker:
