--- a/visa-core/src/main/resources/application.yml
+++ b/visa-core/src/main/resources/application.yml
@@ -14,7 +14,7 @@ quarkus:
     database:
       generation: update
     log:
-      sql: true
+      sql: false
   scheduler:
     enabled: ${VISA_SCHEDULER_ENABLED:true}
   devservices:
@@ -153,7 +153,7 @@ graphql:
       username: ${VISA_DATABASE_USERNAME}
       password: ${VISA_DATABASE_PASSWORD}
       jdbc:
-        url: ${VISA_DATABASE_URL_FULL}/${VISA_DATABASE_USERNAME}
+        url: ${VISA_DATABASE_URL_FULL}
       db-kind: postgresql
 
 "%dev":
@@ -162,7 +162,7 @@ graphql:
       username: ${VISA_DATABASE_USERNAME}
       password: ${VISA_DATABASE_PASSWORD}
       jdbc:
-        url: ${VISA_DATABASE_URL}/${VISA_DATABASE_USERNAME}
+        url: ${VISA_DATABASE_URL_FULL}
       db-kind: postgresql
 
 "%test":
