add QUARKUS_PROFILE as env var to Docker build job

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -43,3 +43,5 @@ jobs:
           file       : ./Dockerfile
           push: true
           tags: ${{ steps.meta.outputs.tags }}
+        env:
+          QUARKUS_PROFILE: dev
