--- a/visa-core/src/main/resources/application.yml
+++ b/visa-core/src/main/resources/application.yml
@@ -153,7 +153,7 @@ graphql:
       username: ${VISA_DATABASE_USERNAME}
       password: ${VISA_DATABASE_PASSWORD}
       jdbc:
-        url: ${VISA_DATABASE_URL_FULL}
+        url: ${VISA_DATABASE_URL}
       db-kind: postgresql
 
 "%dev":
@@ -162,7 +162,7 @@ graphql:
       username: ${VISA_DATABASE_USERNAME}
       password: ${VISA_DATABASE_PASSWORD}
       jdbc:
-        url: ${VISA_DATABASE_URL_FULL}
+        url: ${VISA_DATABASE_URL}
       db-kind: postgresql
 
 "%test":
