diable cors filter for dev ui

--- a/visa-core/src/main/resources/application.yml
+++ b/visa-core/src/main/resources/application.yml
@@ -171,6 +171,9 @@ graphql:
 
 "%dev":
   quarkus:
+    dev-ui: 
+      cors:
+        enabled: false
     datasource:
       username: ${VISA_DATABASE_USERNAME}
       password: ${VISA_DATABASE_PASSWORD}
