fix path for dev-ui authentication

--- a/visa-core/src/main/resources/application.yml
+++ b/visa-core/src/main/resources/application.yml
@@ -8,7 +8,7 @@ quarkus:
     auth:
       permission:
         dev-ui:
-          paths: /q/dev-ui/*
+          paths: /api/q/dev-ui/*
           policy: authenticated
     root-path: /api
     port: ${VISA_SERVER_PORT:8086}
