--- a/visa-core/src/main/resources/application.yml
+++ b/visa-core/src/main/resources/application.yml
@@ -6,7 +6,7 @@ quarkus:
     password: ${VISA_DATABASE_PASSWORD}
     url: ${VISA_SERVER_HOST:localhost}/api
   oidc:
-    auth-server-url: ${VISA_CLIENT_CONFIG_LOGIN_ISSUER:}
+    auth-server-url: ${VISA_CLIENT_CONFIG_LOGIN_ISSUER}
     client-id: ${VISA_CLIENT_CONFIG_LOGIN_CLIENT_ID:}
     application-type: web-app
 # see note on quarkus.oidc.token-state-manager.encryption-secret in https://quarkus.io/guides/security-oidc-code-flow-authentication-tutorial
