--- a/visa-core/src/main/resources/application.yml
+++ b/visa-core/src/main/resources/application.yml
@@ -43,18 +43,15 @@ quarkus:
 #      body-limit: 1000
     account-service:
       url: ${VISA_ACCOUNTS_SERVICE_CLIENT_URL}
-    security-group-service:
-      url: ${VISA_SECURITY_GROUP_SERVICE_CLIENT_URL}
   native:
     resources:
       includes: images/thumbnail.jpg,fixtures/**.sql,words/**.txt,emails/templates/**.twig
   log:
-    level: INFO
+    level: DEBUG
     console:
       enable: true
     file:
-      rotation:
-        max-file-size: 100M
+      enable: false
     category:
       "eu.ill":
         level: ${VISA_LOGGING_LEVEL:INFO}
