--- a/visa-core/src/main/resources/application.yml
+++ b/visa-core/src/main/resources/application.yml
@@ -47,7 +47,7 @@ quarkus:
     resources:
       includes: images/thumbnail.jpg,fixtures/**.sql,words/**.txt,emails/templates/**.twig
   log:
-    level: DEBUG
+    level: INFO
     console:
       enable: true
     file:
