--- a/pom.xml
+++ b/pom.xml
@@ -74,6 +74,11 @@
             <artifactId>quarkus-logging-json</artifactId>
         </dependency>
         <dependency>
+        <groupId>io.smallrye</groupId>
+        <artifactId>smallrye-context-propagation</artifactId>
+        <version>YOUR_VERSION</version>
+        </dependency>
+        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
         </dependency>
