--- a/pom.xml
+++ b/pom.xml
@@ -76,7 +76,7 @@
         <dependency>
         <groupId>io.smallrye</groupId>
         <artifactId>smallrye-context-propagation</artifactId>
-        <version>YOUR_VERSION</version>
+        <version>2.1.2</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
