--- a/visa-business/pom.xml
+++ b/visa-business/pom.xml
@@ -14,6 +14,31 @@
         <pebble.version>3.2.2</pebble.version>
         <bouncycastle.version>1.78.1</bouncycastle.version>
     </properties>
+<build>
+    <plugins>
+        <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-compiler-plugin</artifactId>
+            <version>3.8.1</version>
+            <configuration>
+                <source>11</source>
+                <target>11</target>
+            </configuration>
+        </plugin>
+        <plugin>
+            <groupId>org.jboss.jandex</groupId>
+            <artifactId>jandex-maven-plugin</artifactId>
+            <version>1.0.8</version>
+            <executions>
+                <execution>
+                    <goals>
+                        <goal>jandex</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
+    </plugins>
+</build>
 
     <dependencies>
 
