--- a/visa-persistence/pom.xml
+++ b/visa-persistence/pom.xml
@@ -20,9 +20,9 @@
                 </configuration>
             </plugin>
             <plugin>
-                <groupId>org.jboss.jandex</groupId>
+                <groupId>io.smallrye</groupId>
                 <artifactId>jandex-maven-plugin</artifactId>
-                <version>1.0.8</version>
+                <version>3.2.0</version>
                 <executions>
                     <execution>
                         <goals>
