--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,23 @@
         <quarkus.platform.version>3.11.1</quarkus.platform.version>
         <commons-lang.version>3.14.0</commons-lang.version>
     </properties>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-maven-plugin</artifactId>
+                <version>3.11.1</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>build</goal>
+                            <goal>remote-dev</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 
     <dependencyManagement>
         <dependencies>
