build visa-app as native

--- a/visa-app/pom.xml
+++ b/visa-app/pom.xml
@@ -159,7 +159,7 @@
             </build>
             <properties>
                 <quarkus.native.additional-build-args>--initialize-at-run-time=eu.ill.visa.business.services.InstanceNameGeneratorService</quarkus.native.additional-build-args>
-                <quarkus.package.type>mutable-jar</quarkus.package.type>
+                <quarkus.package.type>native</quarkus.package.type>
             </properties>
         </profile>
     </profiles>
