--- a/visa-core/src/main/resources/application.yml
+++ b/visa-core/src/main/resources/application.yml
@@ -1,6 +1,4 @@
 quarkus:
-  quarkus-smallrye-context-propagation:
-    enabled: true
   package:
     jar:
       type: mutable-jar
@@ -11,7 +9,7 @@ quarkus:
   oidc:
     auth-server-url: ${VISA_CLIENT_CONFIG_LOGIN_ISSUER}
     client-id: ${VISA_CLIENT_CONFIG_LOGIN_CLIENT_ID:}
-    application-type: web-app
+    application-type: HYBRID
     token-state-manager:
       encryption-secret: oaDedeefulodiv9noeTho0eilai6reg8
 # see note on quarkus.oidc.token-state-manager.encryption-secret in https://quarkus.io/guides/security-oidc-code-flow-authentication-tutorial
@@ -178,7 +176,7 @@ graphql:
       jdbc:
         url: ${VISA_DATABASE_URL_FULL}
       db-kind: postgresql
-      db-name: ${VISA_DATABASE_USERNAME}
+
 
 "%dev":
   quarkus:
