--- a/visa-core/src/main/resources/application.yml
+++ b/visa-core/src/main/resources/application.yml
@@ -9,7 +9,7 @@ quarkus:
   oidc:
     auth-server-url: ${VISA_CLIENT_CONFIG_LOGIN_ISSUER}
     client-id: ${VISA_CLIENT_CONFIG_LOGIN_CLIENT_ID:}
-    application-type: HYBRID
+    application-type: WEB_APP
     token-state-manager:
       encryption-secret: oaDedeefulodiv9noeTho0eilai6reg8
 # see note on quarkus.oidc.token-state-manager.encryption-secret in https://quarkus.io/guides/security-oidc-code-flow-authentication-tutorial
@@ -186,7 +186,7 @@ graphql:
     datasource:
       username: ${VISA_DATABASE_USERNAME}
       password: ${VISA_DATABASE_PASSWORD}
-      jdbc:
+      jdbc: 
         url: ${VISA_DATABASE_URL_FULL}
       db-kind: postgresql
       db-name: ${VISA_DATABASE_USERNAME}
