--- a/visa-business/pom.xml
+++ b/visa-business/pom.xml
@@ -82,6 +82,10 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-oidc</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-websockets</artifactId>
+        </dependency>
 
     </dependencies>
 
