--- a/visa-web-graphql/pom.xml
+++ b/visa-web-graphql/pom.xml
@@ -53,6 +53,10 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-oidc</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-websockets</artifactId>
+        </dependency>
 
 
     </dependencies>
