--- a/visa-remote-desktop/pom.xml
+++ b/visa-remote-desktop/pom.xml
@@ -45,7 +45,11 @@
             <artifactId>visa-business</artifactId>
             <version>3.0.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>eu.ill.visa</groupId>
+            <artifactId>visa-message-broker</artifactId>
+            <version>3.0.0</version>
+        </dependency>
         <dependency>
             <groupId>org.apache.guacamole</groupId>
             <artifactId>guacamole-common</artifactId>
