--- a/visa-app/pom.xml
+++ b/visa-app/pom.xml
@@ -53,6 +53,12 @@
             <version>3.0.0</version>
         </dependency>
         <dependency>
+            <groupId>eu.ill.visa</groupId>
+            <artifactId>visa-message-broker</artifactId>
+            <version>3.0.0</version>
+        </dependency>
+
+        <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-oidc</artifactId>
         </dependency>
