fix redis provider

--- a/visa-core/src/main/resources/application.yml
+++ b/visa-core/src/main/resources/application.yml
@@ -194,7 +194,7 @@ graphql:
         url: ${VISA_DATABASE_URL_FULL}
       db-kind: postgresql
     redis:
-      hosts-provider-name: ${VISA_VDI_REDIS_URL}
+      hosts-provider-name: redis-pubsub-hosts-provider
       #    max-pool-size: 24
       # hosts: ${VISA_VDI_REDIS_URL}
       devservices:
