--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -40,7 +40,7 @@ jobs:
         uses: docker/build-push-action@v4
         with:
           context    : .
-          file       : ./Dockerfile
+          file       : ./Dockerfile.quarkus
           push: true
           tags: ${{ steps.meta.outputs.tags }}
         env:
