run cmd using mvnw instead of java

--- a/Dockerfile.quarkus
+++ b/Dockerfile.quarkus
@@ -27,9 +27,9 @@ WORKDIR /usr/src/app
 EXPOSE 5005 8081 8086 8087 
 
 # Run the application 
-# CMD ["./mvnw", "quarkus:dev", "-Dquarkus.http.host=0.0.0.0"]
+CMD ["./mvnw", "quarkus:dev", "-Dquarkus.http.host=0.0.0.0"]
 # CMD ["java", "-jar", "visa-app/target/quarkus-app/quarkus-run.jar"]
-CMD ["java", "-jar", "visa-app/target/visa-app-runner.jar"]
+# CMD ["java", "-jar", "visa-app/target/visa-app-runner.jar"]
 
 
 
