use live-reload instrumentation

--- a/visa-core/src/main/resources/application.yml
+++ b/visa-core/src/main/resources/application.yml
@@ -5,7 +5,7 @@ quarkus:
   live-reload:
     password: ${VISA_DATABASE_PASSWORD}
     url: ${VISA_SERVER_HOST:localhost}/api
-    instrumentation: false
+    instrumentation: true
   oidc:
     auth-server-url: ${VISA_CLIENT_CONFIG_LOGIN_ISSUER}
     client-id: ${VISA_CLIENT_CONFIG_LOGIN_CLIENT_ID:}
