removed hardcoded quarkus version

--- a/visa-app/pom.xml
+++ b/visa-app/pom.xml
@@ -74,7 +74,7 @@
             <plugin>
                 <groupId>${quarkus.platform.group-id}</groupId>
                 <artifactId>quarkus-maven-plugin</artifactId>
-                <version>3.12.3</version>
+                <version>${quarkus.platform.version}</version>
                 <extensions>true</extensions>
                 <executions>
                     <execution>
