--- a/visa-core/pom.xml
+++ b/visa-core/pom.xml
@@ -23,7 +23,7 @@
             <plugin>
                 <groupId>io.smallrye</groupId>
                 <artifactId>jandex-maven-plugin</artifactId>
-                <version>3.1.8</version>
+                <version>3.2.2</version>
                 <executions>
                     <execution>
                         <goals>
@@ -35,6 +35,7 @@
             <plugin>
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-maven-plugin</artifactId>
+                <version>${quarkus.platform.version}</version>
             </plugin>
         </plugins>
     </build>
