show quarkus banner, no debug logs

--- a/visa-core/src/main/resources/application.yml
+++ b/visa-core/src/main/resources/application.yml
@@ -180,8 +180,10 @@ graphql:
 
 "%dev":
   quarkus:
+    banner:
+      enabled: true
     log:
-      level: DEBUG
+      level: INFO
     dev-ui: 
       cors:
         enabled: false
