quarkus.mailer.tls false

--- a/visa-core/src/main/resources/application.yml
+++ b/visa-core/src/main/resources/application.yml
@@ -197,7 +197,8 @@ graphql:
       # hosts: ${VISA_VDI_REDIS_URL}
       devservices:
         enabled: false
-
+    mailer:
+      tls: false
 "%test":
   quarkus:
     scheduler:
