--- a/visa-remote-desktop/pom.xml
+++ b/visa-remote-desktop/pom.xml
@@ -28,6 +28,15 @@
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-maven-plugin</artifactId>
                 <version>3.15.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>build</goal>
+                            <goal>generate-code</goal>
+                            <goal>generate-code-tests</goal>
+                        </goals>    
+                    </execution>
+                </executions>                      
             </plugin>
             <plugin>
                 <groupId>io.smallrye</groupId>
@@ -50,6 +59,11 @@
             <artifactId>visa-business</artifactId>
             <version>3.0.0</version>
         </dependency>
+        <dependency>
+        <groupId>io.quarkus</groupId>
+        <artifactId>quarkus-websockets</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>eu.ill.visa</groupId>
             <artifactId>visa-message-broker</artifactId>
@@ -74,10 +88,6 @@
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-oidc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-websockets</artifactId>
         </dependency>
     </dependencies>
 
