--- a/visa-cloud/pom.xml
+++ b/visa-cloud/pom.xml
@@ -35,6 +35,15 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-maven-plugin</artifactId>
             <version>3.15.0</version>
+                 <executions>
+                    <execution>
+                        <goals>
+                            <goal>build</goal>
+                            <goal>generate-code</goal>
+                            <goal>generate-code-tests</goal>
+                        </goals>    
+                    </execution>               
+                </executions>   
         </plugin>            
         </plugins>
     </build>
@@ -43,10 +52,6 @@
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-oidc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-websockets</artifactId>
         </dependency>
     </dependencies>
 
