--- a/visa-message-broker/pom.xml
+++ b/visa-message-broker/pom.xml
@@ -28,6 +28,15 @@
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-maven-plugin</artifactId>
                 <version>3.15.0</version>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>build</goal>
+                            <goal>generate-code</goal>
+                            <goal>generate-code-tests</goal>
+                        </goals>    
+                    </execution>
+                </executions>                      
             </plugin>
             <plugin>
                 <groupId>io.smallrye</groupId>
