--- a/visa-security/pom.xml
+++ b/visa-security/pom.xml
@@ -22,6 +22,15 @@
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-maven-plugin</artifactId>
                 <version>3.15.0</version>
+                    <executions>
+                    <execution>
+                        <goals>
+                            <goal>build</goal>
+                            <goal>generate-code</goal>
+                            <goal>generate-code-tests</goal>
+                        </goals>    
+                    </execution>         
+                                        </executions>             
             </plugin>
             <plugin>
                 <groupId>io.smallrye</groupId>
@@ -53,10 +62,5 @@
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-oidc</artifactId>
         </dependency>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-websockets</artifactId>
-        </dependency>
-
     </dependencies>
 </project>
