--- a/visa-web-rest/pom.xml
+++ b/visa-web-rest/pom.xml
@@ -38,6 +38,15 @@
                 <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-maven-plugin</artifactId>
                 <version>3.15.0</version>
+                    <executions>
+                    <execution>
+                        <goals>
+                            <goal>build</goal>
+                            <goal>generate-code</goal>
+                            <goal>generate-code-tests</goal>
+                        </goals>    
+                    </execution>             
+                                        </executions>         
             </plugin>
         </plugins>
     </build>
@@ -62,10 +71,6 @@
         <dependency>
             <groupId>io.quarkus</groupId>
             <artifactId>quarkus-oidc</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-websockets</artifactId>
         </dependency>
     </dependencies>
 
