--- a/visa-app/pom.xml
+++ b/visa-app/pom.xml
@@ -68,9 +68,18 @@
         <finalName>visa-app</finalName>
         <plugins>
             <plugin>
-                <groupId>${quarkus.platform.group-id}</groupId>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-maven-plugin</artifactId>
                 <version>3.15.0</version>
+                <executions>                
+                    <execution>
+                        <goals>
+                            <goal>build</goal>
+                            <goal>generate-code</goal>
+                            <goal>generate-code-tests</goal>
+                        </goals>    
+                    </execution>
+                </executions>                 
                 <extensions>true</extensions>
             </plugin>
 
