make all jars mutable

--- a/Dockerfile.quarkus
+++ b/Dockerfile.quarkus
@@ -9,7 +9,7 @@ WORKDIR /usr/src/app
 
 COPY . /usr/src/app
 
-# RUN ./mvnw clean package -B -Dquarkus.package.type=uber-jar -DskipTests=true $MAVEN_OPTS
+# RUN ./mvnw clean package -B -Dquarkus.package.jar.type=uber-jar -DskipTests=true $MAVEN_OPTS
 RUN ./mvnw clean package -B -Dquarkus.package.jar.type=mutable-jar -DskipTests=true $MAVEN_OPTS
 
 
