--- a/visa-security/pom.xml
+++ b/visa-security/pom.xml
@@ -7,6 +7,9 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>visa-security</artifactId>
+    <properties>
+        <quarkus.package.jar.type>mutable-jar</quarkus.package.jar.type>
+    </properties>    
     <build>
         <plugins>
             <plugin>
