--- a/visa-core/pom.xml
+++ b/visa-core/pom.xml
@@ -9,6 +9,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>visa-core</artifactId>
+    <properties>
+        <quarkus.package.jar.type>mutable-jar</quarkus.package.jar.type>
+    </properties>
     <build>
         <plugins>
             <plugin>
