--- a/visa-message-broker/pom.xml
+++ b/visa-message-broker/pom.xml
@@ -10,8 +10,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>visa-message-broker</artifactId>
-
     <properties>
+            <quarkus.package.jar.type>mutable-jar</quarkus.package.jar.type>
     </properties>
     <build>
         <plugins>
