use quarkus:dev for live-coding

--- a/Dockerfile.quarkus
+++ b/Dockerfile.quarkus
@@ -29,8 +29,8 @@ RUN chmod o+rw -R /usr/src/app
 EXPOSE 5005 8086  
 
 # Run the application 
-# CMD ["./mvnw", "quarkus:dev", "-Dquarkus.http.host=0.0.0.0"]
-CMD ["java", "-jar", "visa-app/target/quarkus-app/quarkus-run.jar"]
+CMD ["./mvnw", "quarkus:dev", "-Dquarkus.http.host=0.0.0.0" "visa-app/target/quarkus-app/quarkus-run.jar"]
+# CMD ["java", "-jar", "visa-app/target/quarkus-app/quarkus-run.jar"]
 # CMD ["java", "-jar", "visa-app/target/visa-app.jar"]
 
 
