build in one stage, use main-class for quarkus.package

--- a/Dockerfile.quarkus
+++ b/Dockerfile.quarkus
@@ -11,18 +11,7 @@ WORKDIR /usr/src/app
 
 
 # RUN ./mvnw clean package -B -Dquarkus.package.jar.type=uber-jar -DskipTests=true $MAVEN_OPTS
-RUN ./mvnw clean package -B -Dquarkus.package.jar.type=mutable-jar -DskipTests=true $MAVEN_OPTS
-
-
-# Stage 2: Create the runtime image
-FROM amazoncorretto:21-alpine
-
-RUN mkdir -p /app
-
-# Copy the Maven wrapper and application source code for dev mode
-COPY --from=builder /usr/src/app usr/src/app
-
-WORKDIR /usr/src/app
+RUN ./mvnw clean install -B -Dquarkus.package.jar.type=mutable-jar -DskipTests=true $MAVEN_OPTS
 
 RUN chmod o+rw -R /usr/src/app
 
@@ -31,9 +20,6 @@ EXPOSE 5005 8086
 
 # Run the application 
 CMD ["./mvnw", "quarkus:dev", "-Dquarkus.http.host=0.0.0.0"]
-# CMD ["java", "-jar", "visa-app/target/quarkus-app/quarkus-run.jar"]
-# CMD ["java", "-jar", "visa-app/target/visa-app.jar"]
-
 
 
 
