--- a/Dockerfile.quarkus
+++ b/Dockerfile.quarkus
@@ -10,7 +10,7 @@ WORKDIR /usr/src/app
 COPY . /usr/src/app
 
 # RUN ./mvnw clean package -B -Dquarkus.package.jar.type=uber-jar -DskipTests=true $MAVEN_OPTS
-RUN ./mvnw clean package -B -Dquarkus.package.jar.type=mutable-jar -DskipTests=true $MAVEN_OPTS
+RUN ./mvnw clean install -B -pl visa-app -U -am -Dquarkus.package.jar.type=mutable-jar -DskipTests=true $MAVEN_OPTS
 
 
 # Stage 2: Create the runtime image
@@ -29,9 +29,9 @@ RUN chmod o+rw -R /usr/src/app
 EXPOSE 5005 8086  
 
 # Run the application 
-CMD ["./mvnw", "quarkus:dev", "-Dquarkus.http.host=0.0.0.0"]
+CMD ["java", "-Dquarkus.launch.devmode=true", "-Dquarkus.http.host=0.0.0.0", "-DdebugHost=0.0.0.0", "-jar", "visa-app/target/quarkus-app/quarkus-run.jar"]
+# java -Dquarkus.launch.devmode=true -Dquarkus.http.host=0.0.0.0 -DdebugHost=0.0.0.0 -jar visa-app/target/quarkus-app/quarkus-run.jar 
 
-# CMD ./mvnw quarkus:dev -pl visa-app -Dquarkus.http.host=0.0.0.0
 
 
 
