add quarkus-maven-plugin to all modules

--- a/Dockerfile.quarkus
+++ b/Dockerfile.quarkus
@@ -10,7 +10,7 @@ WORKDIR /usr/src/app
 COPY . /usr/src/app
 
 # RUN ./mvnw clean package -B -Dquarkus.package.jar.type=uber-jar -DskipTests=true $MAVEN_OPTS
-RUN ./mvnw clean install -B -pl visa-app -U -am -Dquarkus.package.jar.type=mutable-jar -DskipTests=true $MAVEN_OPTS
+RUN ./mvnw clean install -B -Dquarkus.package.jar.type=mutable-jar -DskipTests=true $MAVEN_OPTS
 
 
 # Stage 2: Create the runtime image
