--- a/visa-app/pom.xml
+++ b/visa-app/pom.xml
@@ -152,7 +152,7 @@
             </build>
             <properties>
                 <quarkus.native.additional-build-args>--initialize-at-run-time=eu.ill.visa.business.services.InstanceNameGeneratorService\,zmq.util.Utils</quarkus.native.additional-build-args>
-                <quarkus.package.type>native</quarkus.package.type>
+                <quarkus.package.jar.type>native</quarkus.package.jar.type>
             </properties>
         </profile>
     </profiles>
